<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>progra3.pos</groupId>
    <artifactId>Pos</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <version>3.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <version>3.0.1</version>
        </dependency>
	<dependency>
   	 <groupId>com.itextpdf</groupId>
   	 <artifactId>kernel</artifactId>
   	 <version>8.0.5</version>
	</dependency>
	<dependency>
 	   <groupId>com.itextpdf</groupId>
  	  <artifactId>layout</artifactId>
  	  <version>8.0.5</version>
	</dependency>
	<dependency>
 	   <groupId>com.itextpdf</groupId>
  	  <artifactId>io</artifactId>
  	  <version>8.0.5</version>
	</dependency>
	<dependency>
 	   <groupId>com.itextpdf</groupId>
  	  <artifactId>forms</artifactId>
   	 <version>8.0.5</version>
</dependency>



    </dependencies>
</project>